--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
-VITE_SEMANTIC_SEARCH_BASE_URL=https://davanstrien-huggingface-datasets-search-v2.hf.space
+VITE_SEMANTIC_SEARCH_BASE_URL=https://v1kstrand-model-scout-semantic.hf.space
 VITE_HF_HUB_API_BASE_URL=https://huggingface.co/api
-# Optional: set if you have a Hugging Face access token (for gated models or higher limits)
+
+# Optional: set if you have a Hugging Face access token (for gated models or higher limits).
+# WARNING: Vite embeds VITE_* variables in the frontend bundle, so do NOT put secrets here
+# that must remain private server-side.
 VITE_HF_TOKEN=
+
+# Used by Python embedding scripts (build_index_via_inference_api.py, semantic_search_cli.py)
+HF_TOKEN=
